# workflow-rpc

./: Cargo.toml  README.md
src/: client.rs  error.rs  lib.rs  message.rs
src/asynchronous/: error.rs  message.rs  mod.rs  ops.rs  result.rs
src/asynchronous/client/: client.rs  error.rs  mod.rs  with_borsh.rs  with_serde.rs
src/asynchronous/server/: mod.rs  server.rs  with_borsh.rs  with_serde.rs
src/client/: client.rs  error.rs  identifier.rs  mod.rs  with_borsh.rs
src/server/: error.rs  mod.rs  server.rs  with_borsh.rs
