[package]
name = "workflow-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
workflow-log = { path = "../workflow-log" }
workflow-core = { path = "../workflow-core" }
workflow-websocket = { path = "../workflow-websocket" }
async-trait = "0.1.56"
wasm-bindgen = "0.2.79"
borsh = "0.9.3"
manual_future = "0.1.1"
ahash = "0.8.0"
thiserror = "1.0.32"
