[package]
name = "workflow-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
workflow-log = { path = "../workflow-log" }
workflow-core = { path = "../workflow-core" }
workflow-websocket = { path = "../workflow-websocket" }
async-trait = "0.1.56"
wasm-bindgen = "0.2.79"
borsh = "0.9.3"
serde = "1.0.144"
serde_json = "1.0.85"
manual_future = "0.1.1"
ahash = "0.8.0"
thiserror = "1.0.32"
rand = "0.7.3"
futures = "0.3.23"
async-std = { version = "1.12.0", features = ['attributes'] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.20.1", default-features = false, features = ['io-util','time','sync','macros','rt'] }
tungstenite = { version = "0.17.3", default-features = false }
