[package]
name = "workflow-rpc"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-rpc"
keywords = ["websocket","rpc","wasm","browser"]
categories = ["web-programming::websocket","web-programming::http-client"]
exclude = ["/.*", "/test"]
description = """
RPC layer based on workflow-websocket crate offering native & in-browser clients as well as a native-only server
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
workflow-log = "0.1.0"
workflow-core = "0.1.0"
workflow-websocket = "0.1.2"
# workflow-log = { path = "../workflow-log" }
# workflow-core = { path = "../workflow-core" }
# workflow-websocket = { path = "../workflow-websocket" }
async-trait = "0.1.56"
wasm-bindgen = "0.2.79"
borsh = "0.9.3"
serde = "1.0.144"
serde_json = "1.0.85"
manual_future = "0.1.1"
ahash = "0.8.0"
thiserror = "1.0.32"
rand = "0.7.3"
futures = "0.3.23"
async-std = { version = "1.12.0", features = ['attributes'] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.7", features = ['js'] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.20.1", default-features = false, features = ['io-util','time','sync','macros','rt'] }
tungstenite = { version = "0.17.3", default-features = false }
